INDEX: Bug fixed - Overflow text

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,7 +120,7 @@ body{
 }
 
 .textbox-cont-text p{
-    font-size: 125%;
+    font-size: 100%;
     letter-spacing: 2px;
     font-weight: 400;
     margin-left: auto;
